--- a/graphics/2x2x4x3.html
+++ b/graphics/2x2x4x3.html
@@ -18,22 +18,21 @@
             position: relative;
         }
         
-        .zd-player {
+        .zd-player, .zd-timer {
             position: absolute;
-            top: 672px;
         }
 
         #p1 {
-            left: 184px;
+            left: 640px;
         }
 
         #p2 {
-            right: 184px;
+            top: 900px;
+            right: 640px;
         }
 
         .zd-timer {
-            position: absolute;
-            top: 0px;
+            top: 470px;
             left: 860px;
         }
     </style>
