--- a/graphics/3x5x3.html
+++ b/graphics/3x5x3.html
@@ -20,20 +20,25 @@
         
         .zd-player {
             position: absolute;
-            top: 672px;
         }
 
         #p1 {
-            left: 184px;
+            top: 470px;
+            left: 760px;
         }
 
         #p2 {
-            right: 184px;
+            bottom: 563px;
+        }
+
+        #p3 {
+            bottom: 563px;
+            right: 0px;
         }
 
         .zd-timer {
             position: absolute;
-            top: 0px;
+            bottom: 290px;
             left: 860px;
         }
     </style>
@@ -43,6 +48,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
+        <zd-player id="p3" :num="2"></zd-player>
     </div>
 </body>
 </html>
