--- a/graphics/4x16x9.html
+++ b/graphics/4x16x9.html
@@ -20,20 +20,27 @@
         
         .zd-player {
             position: absolute;
-            top: 672px;
         }
 
-        #p1 {
+        #p1, #p2 {
+            top: 432px;
+        }
+
+        #p3, #p4 {
+            bottom: 515px;
+        }
+
+        #p1, #p3 {
             left: 184px;
         }
 
-        #p2 {
+        #p2, #p4 {
             right: 184px;
         }
 
         .zd-timer {
             position: absolute;
-            top: 0px;
+            top: 470px;
             left: 860px;
         }
     </style>
@@ -43,6 +50,8 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
+        <zd-player id="p3" :num="2"></zd-player>
+        <zd-player id="p4" :num="3"></zd-player>
     </div>
 </body>
 </html>
