--- a/graphics/2x5x3.html
+++ b/graphics/2x5x3.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -17,9 +18,12 @@
             width: 1920px;
             position: relative;
         }
-        
-        .zd-player, .zd-timer {
+
+        #app > * {
             position: absolute;
+        }
+        
+        #p1, #p2, .zd-timer {
             top: 576px;
         }
 
@@ -32,8 +36,14 @@
         }
 
         .zd-timer {
-            position: absolute;
             left: 860px;
+        }
+
+        .zd-social {
+            top: 636px;
+            right: 0px;
+            width: 960px;
+            height: 361px;
         }
     </style>
 </head>
@@ -42,6 +52,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
