--- a/graphics/2x10x9.html
+++ b/graphics/2x10x9.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -17,24 +18,30 @@
             width: 1920px;
             position: relative;
         }
-        
-        .zd-player {
+
+        #app > * {
             position: absolute;
-            top: 648px;
         }
 
         #p1 {
+            top: 648px;
             left: 160px;
         }
 
         #p2 {
+            top: 648px;
             right: 160px;
         }
 
         .zd-timer {
-            position: absolute;
-            top: 0px;
+            top: 588px;
             left: 860px;
+        }
+
+        .zd-social {
+            left: 720px;
+            width: 480px;
+            height: 588px;
         }
     </style>
 </head>
@@ -43,6 +50,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
