--- a/graphics/2x2x4x3.html
+++ b/graphics/2x2x4x3.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -18,7 +19,7 @@
             position: relative;
         }
         
-        .zd-player, .zd-timer {
+        #app > * {
             position: absolute;
         }
 
@@ -32,8 +33,15 @@
         }
 
         .zd-timer {
-            top: 470px;
-            left: 860px;
+            top: 900px;
+            left: 640px;
+        }
+
+        .zd-social {
+            top: 480px;
+            left: 640px;
+            width: 640px;
+            height: 420px;
         }
     </style>
 </head>
@@ -42,6 +50,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
