--- a/graphics/3x16x9.html
+++ b/graphics/3x16x9.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -18,7 +19,7 @@
             position: relative;
         }
         
-        .zd-player {
+        #app > * {
             position: absolute;
         }
 
@@ -39,9 +40,14 @@
         }
 
         .zd-timer {
-            position: absolute;
             top: 432px;
             left: 860px;
+        }
+
+        .zd-social {
+            left: 768px;
+            width: 384px;
+            height: 432px;
         }
     </style>
 </head>
@@ -51,6 +57,7 @@
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
         <zd-player id="p3" :num="2"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
