--- a/graphics/3x5x3.html
+++ b/graphics/3x5x3.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -17,8 +18,8 @@
             width: 1920px;
             position: relative;
         }
-        
-        .zd-player {
+
+        #app > * {
             position: absolute;
         }
 
@@ -37,9 +38,14 @@
         }
 
         .zd-timer {
-            position: absolute;
             bottom: 290px;
             left: 860px;
+        }
+
+        .zd-social {
+            right: 0px;
+            width: 560px;
+            height: 457px;
         }
     </style>
 </head>
@@ -49,6 +55,7 @@
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
         <zd-player id="p3" :num="2"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
