--- a/graphics/6x5x3.html
+++ b/graphics/6x5x3.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -18,7 +19,7 @@
             position: relative;
         }
         
-        .zd-player {
+        #app > * {
             position: absolute;
         }
 
@@ -43,9 +44,15 @@
         }
 
         .zd-timer {
-            position: absolute;
             top: 470px;
-            left: 100px;
+            left: 860px;
+        }
+
+        .zd-social {
+            top: 360px;
+            right: 400px;
+            width: 360px;
+            height: 277px;
         }
     </style>
 </head>
@@ -58,6 +65,7 @@
         <zd-player id="p4" :num="3"></zd-player>
         <zd-player id="p5" :num="4"></zd-player>
         <zd-player id="p6" :num="5"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
