--- a/graphics/FSA.html
+++ b/graphics/FSA.html
@@ -10,6 +10,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -18,7 +19,7 @@
             position: relative;
         }
         
-        .zd-player, .zd-timer {
+        #app > * {
             position: absolute;
         }
 
@@ -39,8 +40,15 @@
         }
 
         .zd-timer {
-            top: 830px;
-            left: 140px;
+            top: 860px;
+            left: 120px;
+        }
+
+        .zd-social {
+            top: 720px;
+            left: 960px;
+            width: 520px;
+            height: 277px;
         }
     </style>
 </head>
@@ -51,6 +59,7 @@
         <zd-player id="p2" :num="1"></zd-player>
         <zd-player id="p3" :num="2"></zd-player>
         <zd-player id="p4" :num="3"></zd-player>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
