--- a/dashboard/timer/timer.html
+++ b/dashboard/timer/timer.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_purple-cyan.min.css" />
+    <link rel="stylesheet" href="../shared/styles.css" />
     <script defer src="../../shared/scripts/lodash.core.js"></script>
     <script defer src="../../shared/scripts/vue.js"></script>
     <script defer src="../../shared/scripts/vuecg.js"></script>
