nameplate anchor positions, refine layouts

--- a/graphics/1x2x4x3.html
+++ b/graphics/1x2x4x3.html
@@ -41,7 +41,7 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0"></zd-player>
+        <zd-player id="p1" :num="0" :pos="'none'"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
