--- a/graphics/FSA.html
+++ b/graphics/FSA.html
@@ -55,10 +55,10 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0"></zd-player>
-        <zd-player id="p2" :num="1"></zd-player>
-        <zd-player id="p3" :num="2"></zd-player>
-        <zd-player id="p4" :num="3"></zd-player>
+        <zd-player id="p1" :num="0" :pos="'none'"></zd-player>
+        <zd-player id="p2" :num="1" :pos="'none'"></zd-player>
+        <zd-player id="p3" :num="2" :pos="'none'"></zd-player>
+        <zd-player id="p4" :num="3" :pos="'none'"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
