--- a/graphics/nameplate.html
+++ b/graphics/nameplate.html
@@ -10,10 +10,15 @@
     <script defer src="../shared/components/player.js"></script>
     <script defer src="./nameplate.js"></script>
     <style>
-        #app {
-            /*height: 720px;
-            width: 1280px;
-            position: relative;*/
+        body {
+            position: relative;
+            width: 720px;
+            height: 180px;
+        }
+        .zd-player {
+            position: absolute;
+            top: 60px;
+            left: 160px;
         }
     </style>
 </head>
