--- a/graphics/2x8x7.html
+++ b/graphics/2x8x7.html
@@ -42,6 +42,7 @@
             left: 768px;
             width: 384px;
             height: 612px;
+            overflow: hidden;
         }
     </style>
 </head>
