--- a/graphics/3x16x9.html
+++ b/graphics/3x16x9.html
@@ -48,6 +48,7 @@
             left: 768px;
             width: 384px;
             height: 432px;
+            overflow: hidden;
         }
     </style>
 </head>
@@ -56,7 +57,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
-        <zd-player id="p3" :num="2"></zd-player>
+        <zd-player id="p3" :num="2" :pos="'bottomleft'"></zd-player>
         <zd-social></zd-social>
     </div>
 </body>
