--- a/graphics/1x16x9.html
+++ b/graphics/1x16x9.html
@@ -11,7 +11,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
-    <script defer src="../shared/components/social2.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -32,7 +32,7 @@
             left: 620px;
         }
 
-        .zd-social, .zd-social2 {
+        .zd-social {
             position: absolute;
             top: 480px;
             right: 0px;
@@ -45,7 +45,7 @@
     <div id="app">
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0" :pos="'none'"></zd-player>
-        <zd-social2></zd-social2>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
