--- a/graphics/4x4x3.html
+++ b/graphics/4x4x3.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../shared/styles/common.css" />
     <link rel="stylesheet" href="../shared/styles/player.css" />
     <link rel="stylesheet" href="../shared/styles/timer.css" />
+    <link rel="stylesheet" href="../shared/styles/social.css" />
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
@@ -44,8 +45,8 @@
         }
 
         .zd-timer {
-            top: 517px;
-            left: 1080px;
+            top: 480px;
+            left: 860px;
         }
 
         .zd-social {
