--- a/graphics/2x16x9.html
+++ b/graphics/2x16x9.html
@@ -11,7 +11,7 @@
     <script defer src="../shared/scripts/vuecg.js"></script>
     <script defer src="../shared/components/player.js"></script>
     <script defer src="../shared/components/timer.js"></script>
-    <script defer src="../shared/components/social2.js"></script>
+    <script defer src="../shared/components/social.js"></script>
     <script defer src="../shared/scripts/app.js"></script>
     <style>
         #app {
@@ -41,7 +41,7 @@
             left: 860px;
         }
 
-        .zd-social2 {
+        .zd-social {
             top: 540px;
             left: 460px;
             width: 1000px;
@@ -55,7 +55,7 @@
         <zd-timer></zd-timer>
         <zd-player id="p1" :num="0"></zd-player>
         <zd-player id="p2" :num="1"></zd-player>
-        <zd-social2></zd-social2>
+        <zd-social></zd-social>
     </div>
 </body>
 </html>
