--- a/graphics/3x2x4x3.html
+++ b/graphics/3x2x4x3.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../shared/styles/common.css" />
     <link rel="stylesheet" href="../shared/styles/player.css" />
     <link rel="stylesheet" href="../shared/styles/timer.css" />
+    <link rel="stylesheet" href="../shared/styles/social.css" />
     <script defer src="../shared/scripts/lodash.core.js"></script>
     <script defer src="../shared/scripts/vue.js"></script>
     <script defer src="../shared/scripts/vuecg.js"></script>
@@ -23,24 +24,24 @@
             position: absolute;
         }
 
-        #p1 {
+        .zd-player, .zd-timer {
             top: 884px;
+        }
+
+        #p1 {
             left: 56px;
         }
 
         #p2 {
-            top: 884px;
             right: 568px;
         }
 
         #p3 {
-            top: 884px;
             right: 56px;
         }
 
         .zd-timer {
-            top: 56px;
-            right: 412px;
+            left: 604px;
         }
 
         .zd-social {
