add elimination stuff to nameplates

--- a/graphics/10x3x2.html
+++ b/graphics/10x3x2.html
@@ -72,16 +72,16 @@
 <body> 
     <div id="app">
         <zd-timer></zd-timer>
-        <zd-player id="p1" :num="0"></zd-player>
-        <zd-player id="p2" :num="1"></zd-player>
-        <zd-player id="p3" :num="2"></zd-player>
-        <zd-player id="p4" :num="3"></zd-player>
-        <zd-player id="p5" :num="4"></zd-player>
-        <zd-player id="p6" :num="5"></zd-player>
-        <zd-player id="p7" :num="6"></zd-player>
-        <zd-player id="p8" :num="7"></zd-player>
-        <zd-player id="p9" :num="8"></zd-player>
-        <zd-player id="p10" :num="9"></zd-player>
+        <zd-player id="p1" :num="0" :type="'elimination'"></zd-player>
+        <zd-player id="p2" :num="1" :type="'elimination'"></zd-player>
+        <zd-player id="p3" :num="2" :type="'elimination'"></zd-player>
+        <zd-player id="p4" :num="3" :type="'elimination'"></zd-player>
+        <zd-player id="p5" :num="4" :type="'elimination'"></zd-player>
+        <zd-player id="p6" :num="5" :type="'elimination'"></zd-player>
+        <zd-player id="p7" :num="6" :type="'elimination'"></zd-player>
+        <zd-player id="p8" :num="7" :type="'elimination'"></zd-player>
+        <zd-player id="p9" :num="8" :type="'elimination'"></zd-player>
+        <zd-player id="p10" :num="9" :type="'elimination'"></zd-player>
         <zd-social></zd-social>
         <zd-checkpoint></zd-checkpoint>
     </div>
