--- a/graphics/BotW.html
+++ b/graphics/BotW.html
@@ -65,6 +65,18 @@
             right: 0;
         }
 
+        #p1 {
+            color: #134522;
+        }
+
+        #p2 {
+            color: #9f0110;
+        }
+
+        #p3 {
+            color: #3a4b98;
+        }
+
         #b3, #bb {
             top: 565px;
         }
@@ -98,7 +110,7 @@
             bottom: 83px;
             right: 0px;
             width: 400px;
-            height: 432px;
+            height: 200px;
         }
     </style>
 </head>
