--- a/graphics/e2x3x2.html
+++ b/graphics/e2x3x2.html
@@ -62,7 +62,7 @@
         <zd-player id="p1" :num="0" :type="'elimination'"></zd-player>
         <zd-player id="p2" :num="1" :pos="'topright'" :type="'elimination'"></zd-player>
         <zd-social></zd-social>
-        <zd-checkpoint></zd-checkpoint>
+        <!--zd-checkpoint></zd-checkpoint-->
     </div>
 </body>
 </html>
