--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -12,6 +12,8 @@
     <script defer src="https://unpkg.com/vue-material@beta"></script>
     <script defer src="../../shared/scripts/vuecg.js"></script>
     <script defer src="../../shared/components/timer.js"></script>
+    <script defer src="./race-card.js"></script>
+    <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
 </head>
 <body>
