--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -13,6 +13,7 @@
     <script defer src="../../shared/scripts/vuecg.js"></script>
     <script defer src="../../shared/components/timer.js"></script>
     <script defer src="./race-card.js"></script>
+    <script defer src="./incentive-card.js"></script>
     <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
 </head>
