client part of ticker refactor

--- a/graphics/omnibar.html
+++ b/graphics/omnibar.html
@@ -225,7 +225,7 @@
             }
 
             to {
-                transform: translateX(calc(940px - 100%));
+                transform: translateX(calc(1230px - 100%)); /* 1230px = width of ticker */
             }
         }
     </style>
