--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -12,7 +12,11 @@
     <script defer src="https://unpkg.com/vue-material@beta"></script>
     <script defer src="../../shared/scripts/vuecg.js"></script>
     <script defer src="../../shared/components/timer.js"></script>
+    <script defer src="./finish-button.js"></script>
+    <script defer src="./player-dialog.js"></script>
+    <script defer src="./racer-card-header.js"></script>
     <script defer src="./race-card.js"></script>
+    <script defer src="./elimination-card.js"></script>
     <script defer src="./incentive-card.js"></script>
     <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
