--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons">
-    <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/vue-material.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/vue-material@beta/dist/theme/default-dark.css">
+    <link rel="stylesheet" href="https://unpkg.com/vue-material@1.0.0-beta-11/dist/vue-material.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/vue-material@1.0.0-beta-11/dist/theme/default-dark.css">
     <link rel="stylesheet" href="../shared/styles.css" />
     <script defer src="../../shared/scripts/lodash.core.js"></script>
     <script defer src="../../shared/scripts/vue.js"></script>
-    <script defer src="https://unpkg.com/vue-material@beta"></script>
+    <script defer src="https://unpkg.com/vue-material@1.0.0-beta-11"></script>
     <script defer src="../../shared/scripts/vuecg.js"></script>
     <script defer src="../../shared/components/timer.js"></script>
+    <script defer src="./readonly-field.js"></script>
     <script defer src="./finish-button.js"></script>
     <script defer src="./player-dialog.js"></script>
     <script defer src="./racer-card-header.js"></script>
     <script defer src="./race-card.js"></script>
     <script defer src="./elimination-card.js"></script>
+    <script defer src="./rumble-card.js"></script>
     <script defer src="./incentive-card.js"></script>
     <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
