--- a/dashboard/runs/runs.html
+++ b/dashboard/runs/runs.html
@@ -19,6 +19,7 @@
     <script defer src="./race-card.js"></script>
     <script defer src="./elimination-card.js"></script>
     <script defer src="./rumble-card.js"></script>
+    <script defer src="./bingo-card.js"></script>
     <script defer src="./incentive-card.js"></script>
     <script defer src="./run.js"></script>
     <script defer src="./runs.js"></script>
